# dygma-layer-switcher

./: .gitignore  Cargo.toml  LICENSE  config.yaml  config.yml  readme.md
.github/workflows/: Check.yml  Release-Windows.yml  Release.yml  TestExtract.yml  Validate-Windows.yml  Validate.yml  release.yml  windows.yml
.run/: DLS - Debug.run.xml  DLS - Release.run.xml  Debug.run.xml  Dygma Layer Switcher.run.xml  Release.run.xml  Service.run.xml  UI.run.xml
assets/: tray-windows.rc
assets/windows/: admin.rc  icon.rc  manifest.rc  tray.rc
common/: Cargo.toml
common/src/: app.rs  config.rs  init.rs  layer.rs  lib.rs  log.rs  serial.rs  single.rs  tray.rs
crates/common/: Cargo.toml
crates/common/src/: layer.rs  lib.rs  structs.rs  verbiage.rs
crates/dygma-layer-switcher/: Cargo.toml
crates/dygma-layer-switcher/src/: app.rs  icon.rs  main.rs
dygma-layer-switcher/: Cargo.toml  build.rs  build_win.rs
dygma-layer-switcher-gui/: Cargo.toml
dygma-layer-switcher-gui/src/: app.rs  helpers.rs  main.rs  structs.rs  templates.rs
dygma-layer-switcher-service/: Cargo.toml  build.rs
dygma-layer-switcher-service/src/: main.rs  tray.rs
dygma-layer-switcher-ui/: Cargo.toml  build.rs
dygma-layer-switcher-ui/src/: main.rs
dygma-layer-switcher/src/: app.rs  focus.rs  icon.rs  layer.rs  log.rs  main.rs  single.rs  structs.rs  templates.rs  tray.rs  verbiage.rs  windows.rs
src/: app.rs  config.rs  helpers.rs  layer.rs  main.rs  message_loop.rs  window.rs  window_data.rs
windows/: Cargo.toml
windows/src/: collection.rs  init.rs  layer.rs  lib.rs  message_loop.rs  service.rs  window_data.rs
