[package]
name = "dygma-layer-switcher"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <matt@wildingstudios.com>"]

[dependencies]
anyhow = "1.0"
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
incremental = true
panic = 'unwind'

[profile.release]
opt-level = 3
debug = 0
overflow-checks = false
lto = true
codegen-units = 1
panic = 'abort'
