[package]
name = "Dygma-Layer-Switcher-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
signal-hook = "0.3.17"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serialport = { version = "3.2"}