[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]

[dependencies]
anyhow = "1.0"
image = "0.24"
single-instance = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serialport = "4.2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3.17"
tray-icon = "0.10"
winit = "0.29"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
