[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]

[dependencies]
dygma_focus = { git = "https://github.com/mbwilding/dygma-focus-api-rs" }
anyhow = "1.0"
log = "0.4"
single-instance = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sysinfo = "0.29"
tracing = "0.1"
