[package]
name = "dygma-layer-switcher-gui"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]

[dependencies]
anyhow = "1.0"
dygma_focus = { git = "https://github.com/mbwilding/dygma-focus-api-rs" }
eframe = { version = "0.24", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
serde = { version = "1.0", features = ["derive"] }
single-instance = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4.20"
