[package]
name = "dygma-layer-switcher-service"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <matt@wildingstudios.com>"]

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { path = "../windows" }
