[package]
name = "dygma-layer-switcher"
version = "0.3.5"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]

[dependencies]
anyhow = "1.0"
dygma_focus = { git = "https://github.com/mbwilding/dygma-focus-api-rs.git"}
eframe = { version = "0.24", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
egui_logger = "0.4"
image = "0.24"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serialport = "4.3"
single-instance = "0.3"
sysinfo = "0.30"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }
winit = "0.29"

[build-dependencies]
embed-resource = "2.4"

[features]
no-admin = [] # Disable forced administrator mode
