[package]
name = "dygma-layer-switcher"
version = "0.3.12"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]

[dependencies]
anyhow = "1.0"
dygma_focus = { version = "0.4", default-features = false, features = [
    "is_sync",
] }
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }
image = "0.25"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serialport = "4.3"
single-instance = "0.3"
sysinfo = "0.30"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
winit = "0.30"

[build-dependencies]
embed-resource = "2.5"

[features]
no-admin = [] # Disable forced administrator mode on Windows

# Windows

[target.'cfg(windows)'.package]
build = "build_win.rs"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
