[package]
name = "windows"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]

[target.'cfg(target_os = "windows")'.dependencies]
common = { path = "../common" }
anyhow = "1.0"
tracing = "0.1"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }
windows-service = "0.6"
