[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <mbwilding@gmail.com>"]

[dependencies]
dygma_focus = { version = "0.4", default-features = false, features = [
    "is_sync",
] }
lazy_static = "1.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.30"
